2008-07-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* Compiler_ops.cpp (fwcompiler::checkForShadowing): taking into
	account attributes "tos" and "dscp" while considering IPService
	objects for shadowing.

	* fwbuilder.dtd.in: Added attributes for TOS and DSCP codes to
	IPService xml element

2008-07-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* InterfaceData.h (libfwbuilder): InterfaceData moved from
	fwbuilder to libfwbuilder; using InterfaceData in snmp crawler
	instead of creating temporary Interface objects.

2008-07-01  Vadim Kurland  <vadim@vk.crocodile.org>

	* ICMP6Service.cpp (ICMP6Service::ICMP6Service): Added class
	ICMP6Service

	* fwbuilder.dtd.in: Added XML element ICMP6Service

2008-06-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* dns.cpp (DNS::getHostByAddr): class DNS has been radically
	simplified. Hard to support functions to get NS records and DNS
	zone tranfer have been removed. This class now only provides
	convenience wrappers around gethostbyname2 and gethostbyaddr
	functions. Wrapper functions now accept parameter that defines
	address family type (AF_INET or AF_INET6).

	* configure.in (HAVE_GOODLIBRESOLV): remove checks for thread-safe
	dns libraries, these are not widely used and the code was hard to
	maintain.

	* dns.cpp: get rid of compile warnings

	* DNSName.cpp (DNSName::loadFromSource): throw exception if
	compile-time DNSName object can not resolve dns record.

2008-06-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* merged branch "id-experiment" r98:HEAD

	* Rule.cpp (PolicyRule::getSrc): Caching pointers to rule elements
	in PolicyRule to avoid calls to getFirsTByType if possible

	* TCPUDPService.h (libfwbuilder): source and destination port
	ranges are stored as class member variables for tcp and udp
	services.

2008-06-07  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWReference.h (libfwbuilder): this class uses integer id of
	objects it points to. It keeps id (and its string representation)